# flyer

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  manage.py  pyproject.toml
flights/: admin.py  models.py  serializers.py  urls.py  views.py
flights/management/commands/: fetchflights.py
flights/migrations/: 0001_initial.py  0002_flight_deep_link.py
flyer/: Dockerfile  asgi.py  manage.py  pytest.ini  requirements.txt  settings.py  urls.py  wsgi.py
flyer/flights/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
flyer/flights/management/commands/: fetchflights.py
flyer/flyer/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
