[tool.poetry]
name = "flyer"
version = "0.1.0"
description = "Price list for the common flights!"
authors = ["Nurbakyt Madibek <madibekov.nurbakhyt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
ipython = "^7.22.0"
requests = "^2.25.1"
maya = "^0.6.1"
djangorestframework = "^3.12.4"
pre-commit = "^2.12.1"
pytest = "^6.2.3"
pytest-django = "^4.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
